# ai-tutoring-multi-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: grader.md  question_maker.md
knowledge_base/math/: derivatives.md  integrals.md  knowledge_graph.json
knowledge_base/physics/: mechanics.md
src/ai_tutoring/: __init__.py  agents.py  cost_tracker.py  grader.py  orchestrator.py  question_maker.py  recommend_kp.py  run_demo.py  shared_memory.py  socratic_tutor.py  student_tracker.py
tests/: test_agents.py  test_new_modules.py
